[gd_scene load_steps=10 format=2]

[ext_resource path="res://SpriteSheets/BabyTown2MadScientistBabyTransparent.png" type="Texture" id=1]
[ext_resource path="res://Babies/MadScientistBaby.gd" type="Script" id=2]
[ext_resource path="res://Weapons/RailGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://SpriteSheets/BabyTown2Weapons2Transparent.png" type="Texture" id=4]
[ext_resource path="res://Weapons/WeldingTorch.tscn" type="PackedScene" id=5]
[ext_resource path="res://Weapons/MediKit.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 36 )

[node name="MadScientistBaby" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12, 24, 12, 24, 8, -16, 0, -24, -8, -16 )
__meta__ = {
"_edit_lock_": true
}

[node name="BottomHand" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Tank" type="Sprite" parent="Body"]
position = Vector2( -11, -9 )
texture = ExtResource( 4 )
vframes = 3
hframes = 6
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Hose" type="Line2D" parent="Body/Tank"]
points = PoolVector2Array( 0.460993, -11.9648, 18.9089, -4.09872 )
width = 1.5
default_color = Color( 0.4, 0.501961, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="Body/Tank"]
position = Vector2( 0.5, -12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="TopHand" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="RailGun" parent="TopHand" instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -3 )

[node name="WeldingTorch" parent="TopHand" instance=ExtResource( 5 )]
show_behind_parent = true

[node name="Timer" parent="TopHand/WeldingTorch" index="1"]
autostart = true

[node name="Medikit" parent="TopHand" instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stationary"
anims/Stationary = SubResource( 1 )
anims/Walk = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -11 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="TopHand/WeldingTorch/Torch/Area2D" to="." method="_on_Welder_body_entered"]
[connection signal="timeout" from="TopHand/WeldingTorch/Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[editable path="TopHand/WeldingTorch"]
